# EdgeGen

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: conf.py  index.rst
notebooks/: 01_younger_exploration.ipynb  02_test_tf2networkx_conversion.ipynb  03_huggingface_hub_exploration.ipynb  04_test_huggingface_pytorch_to_onnx.ipynb  visualize_networks.ipynb
src/edgegen/: BO_generate_ofa.py  BO_ofa_search.py  __init__.py  export_unique_architectures.py  filter_graphs.py  generate_ofa.py  main.py  modify_model_outputs.py  predict.py  prepare_surrogate_train_data.py  train_surrogate.py  younger_generate_random_walk.py  younger_select_networks.py
src/edgegen/conversion/: nn_translation.py  tf_layers.py  tf_modules.py  torch2tflite.py
src/edgegen/design_space/: __init__.py  micronet_generator.py  ofa_proxyless_nas_generator.py  rand_torch_architecture_generator.py  younger_generator.py  younger_net_generator.py  younger_selector.py
src/edgegen/evaluation/: __init__.py  eval_engine.py  eval_result.py
src/edgegen/generator/: __init__.py  architecture_generator.py  micronet_generator.py  ofa_proxyless_nas_generator.py  rand_torch_architecture_generator.py  younger_generator.py
src/edgegen/pipeline/: mcunet_pipeline.py  pipeline.py
src/edgegen/plot/: plot_supergraph.py
src/edgegen/repository/: __init__.py  model_repo.py  torch_model_repo.py
src/edgegen/search/: __init__.py  ax_bo.py
src/edgegen/search_space/: __init__.py  micronet_generator.py  rand_torch_architecture_generator.py  younger_generator.py
src/youngernns/: __init__.py  nn_query.py  nn_translation.py
(+46 files in other folders)
