[project]
name = "edgegen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sphinx-autoapi>=3.3.3",
    "sphinx-immaterial>=0.12.4",
    "sphinx>=8.1.3",
    "torch>=2.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edgegen"]
