[project]
name = "edgegen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ax-platform>=0.4.3",
    "numpy>=2.1.3",
    "sphinx-autoapi>=3.3.3",
    "sphinx-immaterial>=0.12.4",
    "sphinx>=8.1.3",
    "torch>=2.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edgegen"]
