[project]
name = "edgegen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ax-platform>=0.4.3",
    "numpy>=2.0.2",
    "onnx>=1.17.0",
    "onnx2tf>=1.26.2",
    "sphinx-autoapi>=3.3.3",
    "sphinx-immaterial>=0.12.4",
    "sphinx>=8.1.3",
    "tensorflow>=2.18.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tf-keras>=2.18.0",
    "onnx-graphsurgeon>=0.5.2",
    "psutil>=6.1.0",
    "sng4onnx>=1.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edgegen"]
